--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <style>
       * {
         box-sizing: border-box;
@@ -15,10 +16,30 @@
       body {
         height: 100vh;
         width: 100vw;
+        overflow: auto;
       }
 
       body {
+        font-family: 'Open Sans', sans-serif;
+        font-size: 14px;
         margin: 0;
+        color: #333;
+      }
+
+      h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6 {
+        color: #111;
+        font-family: 'Crimson Text', serif;
+      }
+
+      @media (min-width: 760px) {
+        body {
+          font-size: 16px;
+        }
       }
 
     </style>
