--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond|Lato" rel="stylesheet">
     <style>
       * {
         box-sizing: border-box;
@@ -20,7 +20,8 @@
       }
 
       body {
-        font-family: 'Open Sans', sans-serif;
+        font-family: 'Lato', sans-serif;
+
         font-size: 14px;
         margin: 0;
         color: #333;
@@ -33,7 +34,7 @@
       h5,
       h6 {
         color: #111;
-        font-family: 'Crimson Text', serif;
+        font-family: 'Cormorant Garamond', serif;
       }
 
       @media (min-width: 760px) {
