--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>FabFitFun | About Us</title>
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond|Lato" rel="stylesheet">
     <style>
       * {
@@ -37,7 +37,7 @@
         font-family: 'Cormorant Garamond', serif;
       }
 
-      @media (min-width: 760px) {
+      @media (min-width: 47rem) {
         body {
           font-size: 16px;
         }
